# flux

./: .gitignore  Cargo.toml
crates/flux-cli/: Cargo.toml
crates/flux-cli/src/: main.rs
crates/flux-core/: Cargo.toml
crates/flux-core/src/: lib.rs
crates/flux-db/: Cargo.toml
crates/flux-db/src/: lib.rs
crates/flux-io/: Cargo.toml
crates/flux-io/src/: lib.rs
crates/flux-loadgen/: Cargo.toml
crates/flux-loadgen/src/: main.rs
crates/flux-schema/: Cargo.toml
crates/flux-schema/schemas/: market_data.fbs
crates/flux-schema/src/: lib.rs
crates/flux-service/: Cargo.toml
crates/flux-service/src/: main.rs
docker/timescaledb/: docker-compose.yml
docs/: milestone-1.md  plan.md
