[workspace]
members = [
    "crates/flux-core",
    "crates/flux-schema",
    "crates/flux-io",
    "crates/flux-db",
    "crates/flux-service",
    "crates/flux-cli",
    "crates/flux-loadgen",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
flatbuffers = "25"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }
zeromq = { version = "0.4.1", default-features = false, features = [
    "tokio-runtime",
    "tcp-transport",
] }
